--- a/infra-k8s/apps/tsre-microservices/templates/paymentservice.yaml
+++ b/infra-k8s/apps/tsre-microservices/templates/paymentservice.yaml
@@ -52,9 +52,11 @@ spec:
               - all
           privileged: false
           # readOnlyRootFilesystem: true
-        image: public.ecr.aws/v6x4t1k2/paymentservice:tsre.v0.6.2
+        image: tsre/paymentservice:kind
+        imagePullPolicy: IfNotPresent
         ports:
-        - containerPort: 50051
+        - name: grpc
+          containerPort: 9090
         env:
         - name: DD_ENV
           valueFrom:
@@ -77,7 +79,11 @@ spec:
         - name: SPRING_DATASOURCE_PASSWORD 
           value: weLoveSwagAtDash2023
         - name: SPRING_JPA_HIBERNATE_DDL_AUTO
-          value: create
+          value: update
+        - name: TSRE_PAYMENT_RATE_LIMITED
+          value: "false"
+        - name: TSRE_PAYMENT_LOCK_TIMEOUT_PROB
+          value: "0.0"
         - name: SERVER_PORT
           value: "8080"
         - name: PORT
@@ -96,12 +102,20 @@ spec:
           value: "true"
         - name: CTHULHU_URL
           value: "cthulhu"
-        # readinessProbe:
-        #   exec:
-        #     command: ["/bin/grpc_health_probe", "-addr=:50051"]
-        # livenessProbe:
-        #   exec:
-        #     command: ["/bin/grpc_health_probe", "-addr=:50051"]
+        readinessProbe:
+          tcpSocket:
+            port: 9090
+          initialDelaySeconds: 5
+          periodSeconds: 5
+          timeoutSeconds: 1
+          failureThreshold: 12
+        livenessProbe:
+          tcpSocket:
+            port: 9090
+          initialDelaySeconds: 20
+          periodSeconds: 10
+          timeoutSeconds: 1
+          failureThreshold: 6
         volumeMounts:
         - name: apmsocketpath
           mountPath: /var/run/datadog          
@@ -141,4 +155,4 @@ spec:
   ports:
   - name: http
     port: 50051
-    targetPort: 50051
+    targetPort: 9090
